Lunalipse.Core/BehaviorScript/ScriptV3/SyntaxParser/LpsScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from LpsScriptParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Lunalipse.Core.BehaviorScript.ScriptV3.SyntaxParser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class LpsScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PROG_NAME_DECLARE=1, CATALOGUE_CHOOSE=2, PLAY=3, PLAY_NUM=4, SET_EQULAIZER=5, 
		DO_BUILDIN_FUNC=6, PROGRAM_GROUP_START=7, PROGRAM_GROUP_END=8, DO_ACTIONS=9, 
		INDEXING_PREFIX=10, INDEXING_INDEX=11, ASSIGN_PREFIX=12, MAKE_CONSTANT=13, 
		ASSIGN_TO=14, PARAMETER_SPLIT=15, TRUE=16, FALSE=17, DO=18, IF=19, IF_SUFX=20, 
		ELSE=21, END_IF=22, BREAK=23, BREAK_LOOP=24, LOOP=25, END_LOOP=26, END_PROGRAM=27, 
		AUTHUR_NAME=28, DECLR=29, FULLSTOP=30, COLON=31, WITH_ACTION=32, VOLUM=33, 
		REPEAT_TIMES=34, LSQUARE=35, RSQUARE=36, LPAREN=37, RPAREN=38, COMMA=39, 
		ADD=40, MINUS=41, MULT=42, DIV=43, AND=44, OR=45, NOT=46, GR=47, LS=48, 
		GE=49, LE=50, EQ=51, NEQ=52, INT=53, REAL=54, ID=55, COMMENT_SINGLE=56, 
		COMMENT_MULTI=57, WS=58, NEW_LINE=59, DONT_CARE1=60, END=61, DONT_CARE2=62, 
		STRING=63, Wspace=64, PROG_START=65, RQUOTE=66;
	public const int
		RULE_prg = 0, RULE_prg_start = 1, RULE_prg_end = 2, RULE_prg_content = 3, 
		RULE_statements = 4, RULE_statements_loop = 5, RULE_if_branch = 6, RULE_else_branch = 7, 
		RULE_if_branch_loop = 8, RULE_else_branch_loop = 9, RULE_loop = 10, RULE_declares = 11, 
		RULE_declare = 12, RULE_declare_ids = 13, RULE_statement = 14, RULE_statement_loop = 15, 
		RULE_cata_choose = 16, RULE_play_actions = 17, RULE_set_eqzr = 18, RULE_do_action = 19, 
		RULE_group_statemnt = 20, RULE_loop_act = 21, RULE_volume_set = 22, RULE_conditions = 23, 
		RULE_condition = 24, RULE_assign = 25, RULE_expr_wrap = 26, RULE_expr = 27, 
		RULE_func_call = 28, RULE_array_indexing = 29, RULE_array = 30, RULE_array_content = 31, 
		RULE_any = 32, RULE_any_id = 33, RULE_any_number = 34, RULE_bool = 35, 
		RULE_optr_P0 = 36, RULE_optr_P1 = 37, RULE_optr_P2 = 38, RULE_optr_P3 = 39, 
		RULE_optr_P4 = 40, RULE_optr_P5 = 41, RULE_optr_P6 = 42;
	public static readonly string[] ruleNames = {
		"prg", "prg_start", "prg_end", "prg_content", "statements", "statements_loop", 
		"if_branch", "else_branch", "if_branch_loop", "else_branch_loop", "loop", 
		"declares", "declare", "declare_ids", "statement", "statement_loop", "cata_choose", 
		"play_actions", "set_eqzr", "do_action", "group_statemnt", "loop_act", 
		"volume_set", "conditions", "condition", "assign", "expr_wrap", "expr", 
		"func_call", "array_indexing", "array", "array_content", "any", "any_id", 
		"any_number", "bool", "optr_P0", "optr_P1", "optr_P2", "optr_P3", "optr_P4", 
		"optr_P5", "optr_P6"
	};

	private static readonly string[] _LiteralNames = {
		null, "'I would like to tell you my adventure of '", "'For the stuff in '", 
		"'I play music called '", "'I play music numbered '", "'And I would like to set my equalizer using '", 
		null, "'I made up an checklist with the following items'", "'and that is all about checklist of '", 
		"'I start checking the checklist called '", "'I ask '", "' for the stuff at position of '", 
		"'I told '", "'that I have made a Pinkie promise'", "' about '", "' with constraints'", 
		"'true'", "'false'", "'I do the following'", "'when '", "' becomes true'", 
		"'otherwise it should be'", "'that is the decision I made'", "'I want to stop here'", 
		"'I want to leave the loop'", "'I started a loop'", "'that is my loop'", 
		"'And that is my adventure in today'", "'Your loyal citizen:'", "'I have '", 
		"'.'", "':'", "'for '", "' percent of awesomeness'", "' times'", "'['", 
		"']'", "'('", "')'", "','", "'+'", "'-'", "'*'", "'/'", "'and'", "'or'", 
		"'not'", "'greater than'", "'less than'", "'greater than or equals to'", 
		"'less than or equals to'", "'equals to'", "'not equals to'", null, null, 
		null, "'P.S.'", "'Here my long waffle start:'", null, null, null, "'And my long waffle end.'", 
		null, null, null, "'Dear Princess Luna:'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PROG_NAME_DECLARE", "CATALOGUE_CHOOSE", "PLAY", "PLAY_NUM", "SET_EQULAIZER", 
		"DO_BUILDIN_FUNC", "PROGRAM_GROUP_START", "PROGRAM_GROUP_END", "DO_ACTIONS", 
		"INDEXING_PREFIX", "INDEXING_INDEX", "ASSIGN_PREFIX", "MAKE_CONSTANT", 
		"ASSIGN_TO", "PARAMETER_SPLIT", "TRUE", "FALSE", "DO", "IF", "IF_SUFX", 
		"ELSE", "END_IF", "BREAK", "BREAK_LOOP", "LOOP", "END_LOOP", "END_PROGRAM", 
		"AUTHUR_NAME", "DECLR", "FULLSTOP", "COLON", "WITH_ACTION", "VOLUM", "REPEAT_TIMES", 
		"LSQUARE", "RSQUARE", "LPAREN", "RPAREN", "COMMA", "ADD", "MINUS", "MULT", 
		"DIV", "AND", "OR", "NOT", "GR", "LS", "GE", "LE", "EQ", "NEQ", "INT", 
		"REAL", "ID", "COMMENT_SINGLE", "COMMENT_MULTI", "WS", "NEW_LINE", "DONT_CARE1", 
		"END", "DONT_CARE2", "STRING", "Wspace", "PROG_START", "RQUOTE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LpsScriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LpsScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LpsScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LpsScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PrgContext : ParserRuleContext {
		public Prg_startContext prg_start() {
			return GetRuleContext<Prg_startContext>(0);
		}
		public Prg_contentContext prg_content() {
			return GetRuleContext<Prg_contentContext>(0);
		}
		public Prg_endContext prg_end() {
			return GetRuleContext<Prg_endContext>(0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prg; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrgContext prg() {
		PrgContext _localctx = new PrgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; prg_start();
			State = 87; prg_content();
			State = 88; prg_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prg_startContext : ParserRuleContext {
		public ITerminalNode PROG_START() { return GetToken(LpsScriptParser.PROG_START, 0); }
		public ITerminalNode PROG_NAME_DECLARE() { return GetToken(LpsScriptParser.PROG_NAME_DECLARE, 0); }
		public ITerminalNode ID() { return GetToken(LpsScriptParser.ID, 0); }
		public ITerminalNode FULLSTOP() { return GetToken(LpsScriptParser.FULLSTOP, 0); }
		public Prg_startContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prg_start; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrg_start(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Prg_startContext prg_start() {
		Prg_startContext _localctx = new Prg_startContext(Context, State);
		EnterRule(_localctx, 2, RULE_prg_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(PROG_START);
			State = 91; Match(PROG_NAME_DECLARE);
			State = 92; Match(ID);
			State = 93; Match(FULLSTOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prg_endContext : ParserRuleContext {
		public ITerminalNode END_PROGRAM() { return GetToken(LpsScriptParser.END_PROGRAM, 0); }
		public ITerminalNode[] FULLSTOP() { return GetTokens(LpsScriptParser.FULLSTOP); }
		public ITerminalNode FULLSTOP(int i) {
			return GetToken(LpsScriptParser.FULLSTOP, i);
		}
		public ITerminalNode AUTHUR_NAME() { return GetToken(LpsScriptParser.AUTHUR_NAME, 0); }
		public ITerminalNode STRING() { return GetToken(LpsScriptParser.STRING, 0); }
		public Prg_endContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prg_end; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrg_end(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Prg_endContext prg_end() {
		Prg_endContext _localctx = new Prg_endContext(Context, State);
		EnterRule(_localctx, 4, RULE_prg_end);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(END_PROGRAM);
			State = 96; Match(FULLSTOP);
			State = 97; Match(AUTHUR_NAME);
			State = 98; Match(STRING);
			State = 99; Match(FULLSTOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prg_contentContext : ParserRuleContext {
		public DeclaresContext declares() {
			return GetRuleContext<DeclaresContext>(0);
		}
		public Group_statemntContext group_statemnt() {
			return GetRuleContext<Group_statemntContext>(0);
		}
		public ITerminalNode FULLSTOP() { return GetToken(LpsScriptParser.FULLSTOP, 0); }
		public Prg_contentContext prg_content() {
			return GetRuleContext<Prg_contentContext>(0);
		}
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public Prg_contentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prg_content; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrg_content(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Prg_contentContext prg_content() {
		Prg_contentContext _localctx = new Prg_contentContext(Context, State);
		EnterRule(_localctx, 6, RULE_prg_content);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 101; declares(0);
				State = 102; group_statemnt();
				State = 103; Match(FULLSTOP);
				State = 104; prg_content();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 106; declares(0);
				State = 107; statements(0);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementsContext : ParserRuleContext {
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statements; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementsContext statements() {
		return statements(0);
	}

	private StatementsContext statements(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		StatementsContext _localctx = new StatementsContext(Context, _parentState);
		StatementsContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_statements, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			}
			Context.Stop = TokenStream.LT(-1);
			State = 117;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StatementsContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_statements);
					State = 113;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 114; statement();
					}
					} 
				}
				State = 119;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Statements_loopContext : ParserRuleContext {
		public Statements_loopContext statements_loop() {
			return GetRuleContext<Statements_loopContext>(0);
		}
		public Statement_loopContext statement_loop() {
			return GetRuleContext<Statement_loopContext>(0);
		}
		public Statements_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statements_loop; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements_loop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statements_loopContext statements_loop() {
		return statements_loop(0);
	}

	private Statements_loopContext statements_loop(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Statements_loopContext _localctx = new Statements_loopContext(Context, _parentState);
		Statements_loopContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_statements_loop, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			}
			Context.Stop = TokenStream.LT(-1);
			State = 125;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Statements_loopContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_statements_loop);
					State = 121;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 122; statement_loop();
					}
					} 
				}
				State = 127;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class If_branchContext : ParserRuleContext {
		public ITerminalNode DO() { return GetToken(LpsScriptParser.DO, 0); }
		public ITerminalNode COLON() { return GetToken(LpsScriptParser.COLON, 0); }
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public ITerminalNode IF() { return GetToken(LpsScriptParser.IF, 0); }
		public Expr_wrapContext expr_wrap() {
			return GetRuleContext<Expr_wrapContext>(0);
		}
		public ITerminalNode IF_SUFX() { return GetToken(LpsScriptParser.IF_SUFX, 0); }
		public ITerminalNode COMMA() { return GetToken(LpsScriptParser.COMMA, 0); }
		public ITerminalNode END_IF() { return GetToken(LpsScriptParser.END_IF, 0); }
		public Else_branchContext else_branch() {
			return GetRuleContext<Else_branchContext>(0);
		}
		public If_branchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_branch; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_branch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_branchContext if_branch() {
		If_branchContext _localctx = new If_branchContext(Context, State);
		EnterRule(_localctx, 12, RULE_if_branch);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128; Match(DO);
			State = 129; Match(COLON);
			State = 130; statements(0);
			State = 131; Match(IF);
			State = 132; expr_wrap();
			State = 133; Match(IF_SUFX);
			State = 134; Match(COMMA);
			State = 136;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ELSE) {
				{
				State = 135; else_branch();
				}
			}

			State = 138; Match(END_IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Else_branchContext : ParserRuleContext {
		public ITerminalNode ELSE() { return GetToken(LpsScriptParser.ELSE, 0); }
		public ITerminalNode COLON() { return GetToken(LpsScriptParser.COLON, 0); }
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public Else_branchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_else_branch; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElse_branch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Else_branchContext else_branch() {
		Else_branchContext _localctx = new Else_branchContext(Context, State);
		EnterRule(_localctx, 14, RULE_else_branch);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(ELSE);
			State = 141; Match(COLON);
			State = 142; statements(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_branch_loopContext : ParserRuleContext {
		public ITerminalNode DO() { return GetToken(LpsScriptParser.DO, 0); }
		public ITerminalNode COLON() { return GetToken(LpsScriptParser.COLON, 0); }
		public Statements_loopContext statements_loop() {
			return GetRuleContext<Statements_loopContext>(0);
		}
		public ITerminalNode IF() { return GetToken(LpsScriptParser.IF, 0); }
		public Expr_wrapContext expr_wrap() {
			return GetRuleContext<Expr_wrapContext>(0);
		}
		public ITerminalNode IF_SUFX() { return GetToken(LpsScriptParser.IF_SUFX, 0); }
		public ITerminalNode COMMA() { return GetToken(LpsScriptParser.COMMA, 0); }
		public ITerminalNode END_IF() { return GetToken(LpsScriptParser.END_IF, 0); }
		public Else_branch_loopContext else_branch_loop() {
			return GetRuleContext<Else_branch_loopContext>(0);
		}
		public If_branch_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_branch_loop; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_branch_loop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_branch_loopContext if_branch_loop() {
		If_branch_loopContext _localctx = new If_branch_loopContext(Context, State);
		EnterRule(_localctx, 16, RULE_if_branch_loop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(DO);
			State = 145; Match(COLON);
			State = 146; statements_loop(0);
			State = 147; Match(IF);
			State = 148; expr_wrap();
			State = 149; Match(IF_SUFX);
			State = 150; Match(COMMA);
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ELSE) {
				{
				State = 151; else_branch_loop();
				}
			}

			State = 154; Match(END_IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Else_branch_loopContext : ParserRuleContext {
		public ITerminalNode ELSE() { return GetToken(LpsScriptParser.ELSE, 0); }
		public ITerminalNode COLON() { return GetToken(LpsScriptParser.COLON, 0); }
		public Statements_loopContext statements_loop() {
			return GetRuleContext<Statements_loopContext>(0);
		}
		public Else_branch_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_else_branch_loop; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElse_branch_loop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Else_branch_loopContext else_branch_loop() {
		Else_branch_loopContext _localctx = new Else_branch_loopContext(Context, State);
		EnterRule(_localctx, 18, RULE_else_branch_loop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156; Match(ELSE);
			State = 157; Match(COLON);
			State = 158; statements_loop(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopContext : ParserRuleContext {
		public ITerminalNode LOOP() { return GetToken(LpsScriptParser.LOOP, 0); }
		public ITerminalNode COLON() { return GetToken(LpsScriptParser.COLON, 0); }
		public Statements_loopContext statements_loop() {
			return GetRuleContext<Statements_loopContext>(0);
		}
		public ITerminalNode END_LOOP() { return GetToken(LpsScriptParser.END_LOOP, 0); }
		public LoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loop; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopContext loop() {
		LoopContext _localctx = new LoopContext(Context, State);
		EnterRule(_localctx, 20, RULE_loop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160; Match(LOOP);
			State = 161; Match(COLON);
			State = 162; statements_loop(0);
			State = 163; Match(END_LOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaresContext : ParserRuleContext {
		public DeclareContext declare() {
			return GetRuleContext<DeclareContext>(0);
		}
		public DeclaresContext declares() {
			return GetRuleContext<DeclaresContext>(0);
		}
		public DeclaresContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declares; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILpsScriptParserVisitor<TResult> typedVisitor = visitor as ILpsScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclares(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclaresContext declares() {
		return declares(0);
	}
